--- a/framew/build.gradle
+++ b/framew/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     api 'androidx.core:core-ktx:1.1.0'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     //RxJava
-    api 'io.reactivex.rxjava2:rxjava:2.x.y'
+    api 'io.reactivex.rxjava2:rxjava:2.1.9'
     //RxAndroid
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     //retrofit
