--- a/framew/build.gradle
+++ b/framew/build.gradle
@@ -11,13 +11,23 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.core:core-ktx:1.1.0'
+    api 'androidx.core:core-ktx:1.3.1'
+    api 'com.gyf.immersionbar:immersionbar:3.0.0'
+    //沉浸式
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     //RxJava
     api 'io.reactivex.rxjava2:rxjava:2.1.9'
